--- a/hacker_rank/display.html
+++ b/hacker_rank/display.html
@@ -10,7 +10,8 @@
     
     <h1>Check the console!</h1>
 
-    <script src = "diagonal_difference.js"></script>
+    <script src="staircase.js"></script>
+    <!-- <script src = "diagonal_difference.js"></script> -->
     <!-- <script src="a_very_big_sum.js"></script> -->
     <!-- <script src="triplets.js"></script> -->
     <!-- <script src="birthday_candles.js"></script> -->
