re-organized filing

--- a/display.html
+++ b/display.html
@@ -10,11 +10,12 @@
     
     <h1>Check the console!</h1>
 
-    <script src="mini_max_sum.js"></script>
-    <!-- <script src="staircase.js"></script> -->
-    <!-- <script src = "diagonal_difference.js"></script> -->
-    <!-- <script src="a_very_big_sum.js"></script> -->
-    <!-- <script src="triplets.js"></script> -->
-    <!-- <script src="birthday_candles.js"></script> -->
+    <script src="time_conversion/time_conversion.js"></script>
+    <!-- <script src="mini_max/find_the_absent_students/"></script> -->
+    <!-- <script src="staircase/staircase.js"></script> -->
+    <!-- <script src = "diagonal_diff/diagonal_difference.js"></script> -->
+    <!-- <script src="big_sum/a_very_big_sum.js"></script> -->
+    <!-- <script src="triplets/triplets.js"></script> -->
+    <!-- <script src="birthday_candles/birthday_candles.js"></script> -->
 </body> 
 </html>
